// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App snapshot renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CategoriesScreen
    navigation={
      Object {
        "navigate": [MockFunction],
      }
    }
    screenProps={
      Object {
        "language": "PT",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <StatusBar
          animated={false}
          hidden={true}
          showHideTransition="fade"
        />,
        <NewCustomHeader
          fave={false}
          language="PT"
          navigation={
            Object {
              "navigate": [MockFunction],
            }
          }
          text="Categorias"
        />,
        <Styled(Content)>
          <Styled(List)
            style={
              Object {
                "backgroundColor": "#7C8589",
              }
            }
          >
            <Styled(ListItem)
              className="list-categories"
              onPress={[Function]}
              style={
                Object {
                  "backgroundColor": "#7C8589",
                  "borderBottomColor": "white",
                  "borderBottomWidth": 1,
                  "justifyContent": "center",
                  "width": "91%",
                }
              }
            >
              <Styled(Button)
                className="all-categories"
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                  }
                }
                transparent={true}
              >
                <Styled(Text)
                  style={
                    Object {
                      "color": "white",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 18,
                      "textAlign": "center",
                    }
                  }
                >
                  Todos
                </Styled(Text)>
              </Styled(Button)>
            </Styled(ListItem)>
          </Styled(List)>
        </Styled(Content)>,
      ],
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animated": false,
          "hidden": true,
          "showHideTransition": "fade",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fave": false,
          "language": "PT",
          "navigation": Object {
            "navigate": [MockFunction],
          },
          "text": "Categorias",
          "toggleLanguage": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Styled(List)
            style={
              Object {
                "backgroundColor": "#7C8589",
              }
            }
          >
            <Styled(ListItem)
              className="list-categories"
              onPress={[Function]}
              style={
                Object {
                  "backgroundColor": "#7C8589",
                  "borderBottomColor": "white",
                  "borderBottomWidth": 1,
                  "justifyContent": "center",
                  "width": "91%",
                }
              }
            >
              <Styled(Button)
                className="all-categories"
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                  }
                }
                transparent={true}
              >
                <Styled(Text)
                  style={
                    Object {
                      "color": "white",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 18,
                      "textAlign": "center",
                    }
                  }
                >
                  Todos
                </Styled(Text)>
              </Styled(Button)>
            </Styled(ListItem)>
          </Styled(List)>,
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(ListItem)
                className="list-categories"
                onPress={[Function]}
                style={
                  Object {
                    "backgroundColor": "#7C8589",
                    "borderBottomColor": "white",
                    "borderBottomWidth": 1,
                    "justifyContent": "center",
                    "width": "91%",
                  }
                }
              >
                <Styled(Button)
                  className="all-categories"
                  onPress={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                    }
                  }
                  transparent={true}
                >
                  <Styled(Text)
                    style={
                      Object {
                        "color": "white",
                        "fontFamily": "OpenSans-Regular",
                        "fontSize": 18,
                        "textAlign": "center",
                      }
                    }
                  >
                    Todos
                  </Styled(Text)>
                </Styled(Button)>
              </Styled(ListItem)>,
              Array [],
            ],
            "style": Object {
              "backgroundColor": "#7C8589",
            },
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Styled(Button)
                  className="all-categories"
                  onPress={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                    }
                  }
                  transparent={true}
                >
                  <Styled(Text)
                    style={
                      Object {
                        "color": "white",
                        "fontFamily": "OpenSans-Regular",
                        "fontSize": 18,
                        "textAlign": "center",
                      }
                    }
                  >
                    Todos
                  </Styled(Text)>
                </Styled(Button)>,
                "className": "list-categories",
                "onPress": [Function],
                "style": Object {
                  "backgroundColor": "#7C8589",
                  "borderBottomColor": "white",
                  "borderBottomWidth": 1,
                  "justifyContent": "center",
                  "width": "91%",
                },
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Styled(Text)
                    style={
                      Object {
                        "color": "white",
                        "fontFamily": "OpenSans-Regular",
                        "fontSize": 18,
                        "textAlign": "center",
                      }
                    }
                  >
                    Todos
                  </Styled(Text)>,
                  "className": "all-categories",
                  "onPress": [Function],
                  "style": Object {
                    "alignItems": "center",
                  },
                  "transparent": true,
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Todos",
                    "style": Object {
                      "color": "white",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 18,
                      "textAlign": "center",
                    },
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": "Todos",
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <StatusBar
            animated={false}
            hidden={true}
            showHideTransition="fade"
          />,
          <NewCustomHeader
            fave={false}
            language="PT"
            navigation={
              Object {
                "navigate": [MockFunction],
              }
            }
            text="Categorias"
          />,
          <Styled(Content)>
            <Styled(List)
              style={
                Object {
                  "backgroundColor": "#7C8589",
                }
              }
            >
              <Styled(ListItem)
                className="list-categories"
                onPress={[Function]}
                style={
                  Object {
                    "backgroundColor": "#7C8589",
                    "borderBottomColor": "white",
                    "borderBottomWidth": 1,
                    "justifyContent": "center",
                    "width": "91%",
                  }
                }
              >
                <Styled(Button)
                  className="all-categories"
                  onPress={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                    }
                  }
                  transparent={true}
                >
                  <Styled(Text)
                    style={
                      Object {
                        "color": "white",
                        "fontFamily": "OpenSans-Regular",
                        "fontSize": 18,
                        "textAlign": "center",
                      }
                    }
                  >
                    Todos
                  </Styled(Text)>
                </Styled(Button)>
              </Styled(ListItem)>
            </Styled(List)>
          </Styled(Content)>,
        ],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animated": false,
            "hidden": true,
            "showHideTransition": "fade",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fave": false,
            "language": "PT",
            "navigation": Object {
              "navigate": [MockFunction],
            },
            "text": "Categorias",
            "toggleLanguage": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(List)
              style={
                Object {
                  "backgroundColor": "#7C8589",
                }
              }
            >
              <Styled(ListItem)
                className="list-categories"
                onPress={[Function]}
                style={
                  Object {
                    "backgroundColor": "#7C8589",
                    "borderBottomColor": "white",
                    "borderBottomWidth": 1,
                    "justifyContent": "center",
                    "width": "91%",
                  }
                }
              >
                <Styled(Button)
                  className="all-categories"
                  onPress={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                    }
                  }
                  transparent={true}
                >
                  <Styled(Text)
                    style={
                      Object {
                        "color": "white",
                        "fontFamily": "OpenSans-Regular",
                        "fontSize": 18,
                        "textAlign": "center",
                      }
                    }
                  >
                    Todos
                  </Styled(Text)>
                </Styled(Button)>
              </Styled(ListItem)>
            </Styled(List)>,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Styled(ListItem)
                  className="list-categories"
                  onPress={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#7C8589",
                      "borderBottomColor": "white",
                      "borderBottomWidth": 1,
                      "justifyContent": "center",
                      "width": "91%",
                    }
                  }
                >
                  <Styled(Button)
                    className="all-categories"
                    onPress={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                      }
                    }
                    transparent={true}
                  >
                    <Styled(Text)
                      style={
                        Object {
                          "color": "white",
                          "fontFamily": "OpenSans-Regular",
                          "fontSize": 18,
                          "textAlign": "center",
                        }
                      }
                    >
                      Todos
                    </Styled(Text)>
                  </Styled(Button)>
                </Styled(ListItem)>,
                Array [],
              ],
              "style": Object {
                "backgroundColor": "#7C8589",
              },
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Styled(Button)
                    className="all-categories"
                    onPress={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                      }
                    }
                    transparent={true}
                  >
                    <Styled(Text)
                      style={
                        Object {
                          "color": "white",
                          "fontFamily": "OpenSans-Regular",
                          "fontSize": 18,
                          "textAlign": "center",
                        }
                      }
                    >
                      Todos
                    </Styled(Text)>
                  </Styled(Button)>,
                  "className": "list-categories",
                  "onPress": [Function],
                  "style": Object {
                    "backgroundColor": "#7C8589",
                    "borderBottomColor": "white",
                    "borderBottomWidth": 1,
                    "justifyContent": "center",
                    "width": "91%",
                  },
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <Styled(Text)
                      style={
                        Object {
                          "color": "white",
                          "fontFamily": "OpenSans-Regular",
                          "fontSize": 18,
                          "textAlign": "center",
                        }
                      }
                    >
                      Todos
                    </Styled(Text)>,
                    "className": "all-categories",
                    "onPress": [Function],
                    "style": Object {
                      "alignItems": "center",
                    },
                    "transparent": true,
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Todos",
                      "style": Object {
                        "color": "white",
                        "fontFamily": "OpenSans-Regular",
                        "fontSize": 18,
                        "textAlign": "center",
                      },
                      "virtual": undefined,
                    },
                    "ref": null,
                    "rendered": "Todos",
                    "type": [Function],
                  },
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`App snapshot renders correctly with categories 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CategoriesScreen
    navigation={
      Object {
        "navigate": [MockFunction],
      }
    }
    screenProps={
      Object {
        "language": "PT",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <StatusBar
          animated={false}
          hidden={true}
          showHideTransition="fade"
        />,
        <NewCustomHeader
          fave={false}
          language="PT"
          navigation={
            Object {
              "navigate": [MockFunction],
            }
          }
          text="Categorias"
        />,
        <Styled(Content)>
          <Styled(List)
            style={
              Object {
                "backgroundColor": "#7C8589",
              }
            }
          >
            <Styled(ListItem)
              className="list-categories"
              onPress={[Function]}
              style={
                Object {
                  "backgroundColor": "#7C8589",
                  "borderBottomColor": "white",
                  "borderBottomWidth": 1,
                  "justifyContent": "center",
                  "width": "91%",
                }
              }
            >
              <Styled(Button)
                className="all-categories"
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                  }
                }
                transparent={true}
              >
                <Styled(Text)
                  style={
                    Object {
                      "color": "white",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 18,
                      "textAlign": "center",
                    }
                  }
                >
                  Todos
                </Styled(Text)>
              </Styled(Button)>
            </Styled(ListItem)>
            <Category
              data={
                Object {
                  "id": 1,
                  "name": "Category 1",
                }
              }
              language="PT"
              onPress={[Function]}
            />
            <Category
              data={
                Object {
                  "id": 2,
                  "name": "Category 2",
                }
              }
              language="PT"
              onPress={[Function]}
            />
            <Category
              data={
                Object {
                  "id": 3,
                  "name": "Category 3",
                }
              }
              language="PT"
              onPress={[Function]}
            />
          </Styled(List)>
        </Styled(Content)>,
      ],
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animated": false,
          "hidden": true,
          "showHideTransition": "fade",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fave": false,
          "language": "PT",
          "navigation": Object {
            "navigate": [MockFunction],
          },
          "text": "Categorias",
          "toggleLanguage": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Styled(List)
            style={
              Object {
                "backgroundColor": "#7C8589",
              }
            }
          >
            <Styled(ListItem)
              className="list-categories"
              onPress={[Function]}
              style={
                Object {
                  "backgroundColor": "#7C8589",
                  "borderBottomColor": "white",
                  "borderBottomWidth": 1,
                  "justifyContent": "center",
                  "width": "91%",
                }
              }
            >
              <Styled(Button)
                className="all-categories"
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                  }
                }
                transparent={true}
              >
                <Styled(Text)
                  style={
                    Object {
                      "color": "white",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 18,
                      "textAlign": "center",
                    }
                  }
                >
                  Todos
                </Styled(Text)>
              </Styled(Button)>
            </Styled(ListItem)>
            <Category
              data={
                Object {
                  "id": 1,
                  "name": "Category 1",
                }
              }
              language="PT"
              onPress={[Function]}
            />
            <Category
              data={
                Object {
                  "id": 2,
                  "name": "Category 2",
                }
              }
              language="PT"
              onPress={[Function]}
            />
            <Category
              data={
                Object {
                  "id": 3,
                  "name": "Category 3",
                }
              }
              language="PT"
              onPress={[Function]}
            />
          </Styled(List)>,
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(ListItem)
                className="list-categories"
                onPress={[Function]}
                style={
                  Object {
                    "backgroundColor": "#7C8589",
                    "borderBottomColor": "white",
                    "borderBottomWidth": 1,
                    "justifyContent": "center",
                    "width": "91%",
                  }
                }
              >
                <Styled(Button)
                  className="all-categories"
                  onPress={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                    }
                  }
                  transparent={true}
                >
                  <Styled(Text)
                    style={
                      Object {
                        "color": "white",
                        "fontFamily": "OpenSans-Regular",
                        "fontSize": 18,
                        "textAlign": "center",
                      }
                    }
                  >
                    Todos
                  </Styled(Text)>
                </Styled(Button)>
              </Styled(ListItem)>,
              Array [
                <Category
                  data={
                    Object {
                      "id": 1,
                      "name": "Category 1",
                    }
                  }
                  language="PT"
                  onPress={[Function]}
                />,
                <Category
                  data={
                    Object {
                      "id": 2,
                      "name": "Category 2",
                    }
                  }
                  language="PT"
                  onPress={[Function]}
                />,
                <Category
                  data={
                    Object {
                      "id": 3,
                      "name": "Category 3",
                    }
                  }
                  language="PT"
                  onPress={[Function]}
                />,
              ],
            ],
            "style": Object {
              "backgroundColor": "#7C8589",
            },
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Styled(Button)
                  className="all-categories"
                  onPress={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                    }
                  }
                  transparent={true}
                >
                  <Styled(Text)
                    style={
                      Object {
                        "color": "white",
                        "fontFamily": "OpenSans-Regular",
                        "fontSize": 18,
                        "textAlign": "center",
                      }
                    }
                  >
                    Todos
                  </Styled(Text)>
                </Styled(Button)>,
                "className": "list-categories",
                "onPress": [Function],
                "style": Object {
                  "backgroundColor": "#7C8589",
                  "borderBottomColor": "white",
                  "borderBottomWidth": 1,
                  "justifyContent": "center",
                  "width": "91%",
                },
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Styled(Text)
                    style={
                      Object {
                        "color": "white",
                        "fontFamily": "OpenSans-Regular",
                        "fontSize": 18,
                        "textAlign": "center",
                      }
                    }
                  >
                    Todos
                  </Styled(Text)>,
                  "className": "all-categories",
                  "onPress": [Function],
                  "style": Object {
                    "alignItems": "center",
                  },
                  "transparent": true,
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Todos",
                    "style": Object {
                      "color": "white",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 18,
                      "textAlign": "center",
                    },
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": "Todos",
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "data": Object {
                  "id": 1,
                  "name": "Category 1",
                },
                "language": "PT",
                "onPress": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "data": Object {
                  "id": 2,
                  "name": "Category 2",
                },
                "language": "PT",
                "onPress": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "class",
              "props": Object {
                "data": Object {
                  "id": 3,
                  "name": "Category 3",
                },
                "language": "PT",
                "onPress": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <StatusBar
            animated={false}
            hidden={true}
            showHideTransition="fade"
          />,
          <NewCustomHeader
            fave={false}
            language="PT"
            navigation={
              Object {
                "navigate": [MockFunction],
              }
            }
            text="Categorias"
          />,
          <Styled(Content)>
            <Styled(List)
              style={
                Object {
                  "backgroundColor": "#7C8589",
                }
              }
            >
              <Styled(ListItem)
                className="list-categories"
                onPress={[Function]}
                style={
                  Object {
                    "backgroundColor": "#7C8589",
                    "borderBottomColor": "white",
                    "borderBottomWidth": 1,
                    "justifyContent": "center",
                    "width": "91%",
                  }
                }
              >
                <Styled(Button)
                  className="all-categories"
                  onPress={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                    }
                  }
                  transparent={true}
                >
                  <Styled(Text)
                    style={
                      Object {
                        "color": "white",
                        "fontFamily": "OpenSans-Regular",
                        "fontSize": 18,
                        "textAlign": "center",
                      }
                    }
                  >
                    Todos
                  </Styled(Text)>
                </Styled(Button)>
              </Styled(ListItem)>
              <Category
                data={
                  Object {
                    "id": 1,
                    "name": "Category 1",
                  }
                }
                language="PT"
                onPress={[Function]}
              />
              <Category
                data={
                  Object {
                    "id": 2,
                    "name": "Category 2",
                  }
                }
                language="PT"
                onPress={[Function]}
              />
              <Category
                data={
                  Object {
                    "id": 3,
                    "name": "Category 3",
                  }
                }
                language="PT"
                onPress={[Function]}
              />
            </Styled(List)>
          </Styled(Content)>,
        ],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animated": false,
            "hidden": true,
            "showHideTransition": "fade",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fave": false,
            "language": "PT",
            "navigation": Object {
              "navigate": [MockFunction],
            },
            "text": "Categorias",
            "toggleLanguage": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Styled(List)
              style={
                Object {
                  "backgroundColor": "#7C8589",
                }
              }
            >
              <Styled(ListItem)
                className="list-categories"
                onPress={[Function]}
                style={
                  Object {
                    "backgroundColor": "#7C8589",
                    "borderBottomColor": "white",
                    "borderBottomWidth": 1,
                    "justifyContent": "center",
                    "width": "91%",
                  }
                }
              >
                <Styled(Button)
                  className="all-categories"
                  onPress={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                    }
                  }
                  transparent={true}
                >
                  <Styled(Text)
                    style={
                      Object {
                        "color": "white",
                        "fontFamily": "OpenSans-Regular",
                        "fontSize": 18,
                        "textAlign": "center",
                      }
                    }
                  >
                    Todos
                  </Styled(Text)>
                </Styled(Button)>
              </Styled(ListItem)>
              <Category
                data={
                  Object {
                    "id": 1,
                    "name": "Category 1",
                  }
                }
                language="PT"
                onPress={[Function]}
              />
              <Category
                data={
                  Object {
                    "id": 2,
                    "name": "Category 2",
                  }
                }
                language="PT"
                onPress={[Function]}
              />
              <Category
                data={
                  Object {
                    "id": 3,
                    "name": "Category 3",
                  }
                }
                language="PT"
                onPress={[Function]}
              />
            </Styled(List)>,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Styled(ListItem)
                  className="list-categories"
                  onPress={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#7C8589",
                      "borderBottomColor": "white",
                      "borderBottomWidth": 1,
                      "justifyContent": "center",
                      "width": "91%",
                    }
                  }
                >
                  <Styled(Button)
                    className="all-categories"
                    onPress={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                      }
                    }
                    transparent={true}
                  >
                    <Styled(Text)
                      style={
                        Object {
                          "color": "white",
                          "fontFamily": "OpenSans-Regular",
                          "fontSize": 18,
                          "textAlign": "center",
                        }
                      }
                    >
                      Todos
                    </Styled(Text)>
                  </Styled(Button)>
                </Styled(ListItem)>,
                Array [
                  <Category
                    data={
                      Object {
                        "id": 1,
                        "name": "Category 1",
                      }
                    }
                    language="PT"
                    onPress={[Function]}
                  />,
                  <Category
                    data={
                      Object {
                        "id": 2,
                        "name": "Category 2",
                      }
                    }
                    language="PT"
                    onPress={[Function]}
                  />,
                  <Category
                    data={
                      Object {
                        "id": 3,
                        "name": "Category 3",
                      }
                    }
                    language="PT"
                    onPress={[Function]}
                  />,
                ],
              ],
              "style": Object {
                "backgroundColor": "#7C8589",
              },
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Styled(Button)
                    className="all-categories"
                    onPress={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                      }
                    }
                    transparent={true}
                  >
                    <Styled(Text)
                      style={
                        Object {
                          "color": "white",
                          "fontFamily": "OpenSans-Regular",
                          "fontSize": 18,
                          "textAlign": "center",
                        }
                      }
                    >
                      Todos
                    </Styled(Text)>
                  </Styled(Button)>,
                  "className": "list-categories",
                  "onPress": [Function],
                  "style": Object {
                    "backgroundColor": "#7C8589",
                    "borderBottomColor": "white",
                    "borderBottomWidth": 1,
                    "justifyContent": "center",
                    "width": "91%",
                  },
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <Styled(Text)
                      style={
                        Object {
                          "color": "white",
                          "fontFamily": "OpenSans-Regular",
                          "fontSize": 18,
                          "textAlign": "center",
                        }
                      }
                    >
                      Todos
                    </Styled(Text)>,
                    "className": "all-categories",
                    "onPress": [Function],
                    "style": Object {
                      "alignItems": "center",
                    },
                    "transparent": true,
                    "virtual": undefined,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Todos",
                      "style": Object {
                        "color": "white",
                        "fontFamily": "OpenSans-Regular",
                        "fontSize": 18,
                        "textAlign": "center",
                      },
                      "virtual": undefined,
                    },
                    "ref": null,
                    "rendered": "Todos",
                    "type": [Function],
                  },
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "class",
                "props": Object {
                  "data": Object {
                    "id": 1,
                    "name": "Category 1",
                  },
                  "language": "PT",
                  "onPress": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "class",
                "props": Object {
                  "data": Object {
                    "id": 2,
                    "name": "Category 2",
                  },
                  "language": "PT",
                  "onPress": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "2",
                "nodeType": "class",
                "props": Object {
                  "data": Object {
                    "id": 3,
                    "name": "Category 3",
                  },
                  "language": "PT",
                  "onPress": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
